test/libsolidity/syntaxTests/inheritance/final_modifier/final_constructor.sol
contract C {
    constructor() final {}
}
// ----
// TypeError: (17-39): Constructor cannot be declared final.
